# k3s-pico-node

./: .gitignore  ARCHITECTURE_PLAN.md  ARCHIVED-README.md  BUILD-ISSUES.md  BUILD_CHANGES.md  CLUSTER_ADMIN_GUIDE.md  CMakeLists.txt  CMakeLists_test.txt  HARDWARE_RESOURCE_MANAGEMENT.md  NEXT_STEPS.md  PORTING_GUIDE.md  README.md  RESOURCE_ACCOUNTING.md  lwipopts.h  mbedtls_config.h
certs/: client-ca.crt  client-kubelet-ec.crt  client-kubelet-ec.csr  client-kubelet.crt  client-kubelet.csr  client-kubelet.key  generate-certs.sh  server-ca.crt  serving-kubelet.conf  serving-kubelet.crt  serving-kubelet.csr  serving-kubelet.key
docs/: ARCHITECTURE.md  KUBELET_REQUIREMENTS.md  NGINX-PROXY-SETUP.md  QUICK-START.md  README.md  TLS-PROXY-RATIONALE.md  k3s-proxy.conf
include/: certs.h  config.h  config_local.h.template  configmap_watcher.h  http_client.h  k3s_client.h  kubelet_server.h  memory_manager.h  node_status.h  tcp_connection.h  time_sync.h  tls_connection.h
plans/: KUBELET_IMPROVEMENTS.md
src/: configmap_watcher.c  http_client.c  k3s_client.c  kubelet_server.c  main.c  memory_manager.c  node_status.c  tcp_connection.c  test_blink.c  time_sync.c  tls_connection.c
test-blink/: CMakeLists.txt  LICENSE  README.md
test-blink/src/: blink_test.c
tests/: CMakeLists.txt  README.md  TESTING_GUIDE.md  TEST_RESULTS.md  TIMESTAMP_TESTS.md  TIMESTAMP_TEST_SUMMARY.md  run_all_tests.sh  test_configmap_polling.sh  test_http_client.c  test_kubelet_endpoints.sh  test_node_registration.sh  test_node_status.c  test_node_status_timestamps.c  test_node_timestamps.sh  test_node_timestamps_simple.sh  test_status_update_format.sh  test_time_sync.c
